--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
                 <directory>src/main/resources</directory>
                 <includes>
                     <include>*.yml</include>
+                    <include>**/*.yml</include>
                 </includes>
             </resource>
         </resources>
@@ -68,6 +69,12 @@
             <artifactId>paperspigot-api</artifactId>
             <version>${paperspigot.version}</version>
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-collections4</artifactId>
+            <version>4.1</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
     
