Random bug fixing, I have no idea what does and doesn't work.

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -8,3 +8,7 @@ website: http://ulfric.com
 database: false
 description: Store for LuckyPrison
 load: STARTUP
+
+commands:
+  storereturn:
+  store:
